--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,7 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     kapt 'com.github.bumptech.glide:compiler:4.15.1'
+    //Paging 3
+    implementation 'androidx.paging:paging-runtime-ktx:3.2.1'
 
 }
