--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'androidx.navigation.safeargs'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -58,7 +59,10 @@ dependencies {
     def nav_version = "2.6.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation 'io.insert-koin:koin-android:3.4.2'
+    implementation "com.google.dagger:hilt-android:2.44"
+    //Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     //Room
     def room_version = "2.5.2"
@@ -73,5 +77,4 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.15.1'
     //Paging 3
     implementation 'androidx.paging:paging-runtime-ktx:3.2.1'
-
 }
